--- a/ControleTickets/Properties/Resources.resx
+++ b/ControleTickets/Properties/Resources.resx
@@ -133,11 +133,20 @@
   <data name="adicionar_FBranco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\adicionar_FBranco.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Search_find_locate_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search_find_locate_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="adicionar1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\adicionar1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="tempo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tempo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Search_find_locate_321" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search_find_locate_321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\excel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ticket_icon-icons.com_52351" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ticket_icon-icons.com_52351.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,22 +154,16 @@
   <data name="add_insert_plus_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add_insert_plus_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ticket-add_25321" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ticket-add_25321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="excluir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\excluir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="adicionar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\adicionar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="excel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\excel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ticket-add_25321" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ticket-add_25321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Search_find_locate_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Search_find_locate_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Search_find_locate_321" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Search_find_locate_321.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="work_station" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\work_station.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
