--- a/ControleTickets/TicketForm.resx
+++ b/ControleTickets/TicketForm.resx
@@ -149,88 +149,9 @@
         59KIcLdqVqcAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="inserirToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAACPtJREFUaEPtWAlUlNcVHpucJk3SnDQJMgOzMAvIorWxNemJ1rRKlmqkxmjU2qzQ
-        inrQo4grOMiquKCCNiI7zgxg1caqiaIQEEUEjYKKLCqbYZuF2RjWub3/+Bhn+UdMTITT5jvnOzPz/nfv
-        /b63/sD4Cf/vAGCM6s3xWdWT41OFPKKReLxMHo18qDM8X+rJ9TnWnTPW2JM7Du7R5xTkMp4gXUYueqVe
-        r6HweiTYEmcinHQbmTBkewcZsn266cRTxGf9htyxb5LuIweQJXpeL/OcjQKrkZRQh+zO9mnT57q7ktDh
-        hy7bfXxXtvc94TKvcIPUu9FWtBVl3l1dMiGHhA8vdAe8/PVSL32XzBso4vcevcwrvUvmpRxss6PU6xAJ
-        Hz7APtYzKCQNBRv1Ukr4fWL7FZ3UqxSf9dk+M1HiFUPSDA/wPPfUSzwrUCAKcsj9eqmnUiehDNo8k4xJ
-        IqkeP7QSz/k6iacaCUNRk+WxBD8Ntu3IZsj1/jlJ+XgAu0RP6SRjErUHxhhpBDmkXuKxGGP6bNu1Eo+t
-        JPWPD1WmBx9FXESCQx6eCPqrgaC7sBB/o0DSjrOg12SN+RI/+yz7Y5sR29KUGQIuKcOANN7T5OsPB32m
-        aKY2y0OBBamitNSdfBP0NSGgr1uLXAPa/JlWzzH+EIq9i0TR1rHY1q/Jcr+tPeBRi1RR+4uUfjRAAeNJ
-        dZb7FuQAFqEK2VOCG7JkAXTdWmfioAFdbQhovnjdqq86wz1Ek+neZ9lGR6xX2ZLp/CyR8f0gT2e7dmaI
-        itSZ7uCImoMToKtyKRhur6cxsBq015eBWjbONu6jzkz3AZs2O2LtDCLlu6Mzg++LCVrpEg9Se2IqGGrX
-        oPgNDg1Qs6At/wT746iSOMxrVGcIwy1z0ZHqp0oXBhBJDwcQM36mTBeJVemifkxAJbEnitEVz0PRoYT3
-        DVDiW6+usDJAUZ3vZ5VDlSGq6UwX5Vm20VGZJpITaUNDkyJyUqYJT6J4cMTO7PFgqFgC3XfCkPYGWlD8
-        O9NdYdfmqVYGtNXB0PnFJHMeZboQR1eQ2ZkuVFrmt2VNgqiDyHswFGmCSco0QRNOGQbSU/OfKdBduxZ6
-        6jc6NEBxfcirMPt9Pqiqgu8bqFkFmutBoJKONedDEwNYc5lljUF2pAqhMl6kK41zf49IpAcwGKMUafxg
-        NNCLo49TRkMcCV3hHBQuJqQ3cFw6D9asnAgXTnwMWzZNgeDlEyAhbprZgLYmGNTln5rymXOnCnRYO9Cy
-        3t0kIZRvFd4o3Sz0ITLpoUrjvaBI5R9RpArAEVUSfO29uhh6G8KRjg2UnfSHiA2TIDVhOkSFTYbG8iCI
-        j/0TlBz/yMqApnolqL7ytanDV+FM7KC+1yUKjCWbhdICsdNzRCY9VKncCfJk/i0MphLQsvPI69CDS6av
-        cZOdgZYrwSg6wGQgZfd0OH1oIfj9hQfSJD808Wc4dXA+CrfYA4MGcBkpD/7Wqo48hT8gT3GrvLFTkFcc
-        LVhMJDqGIpkXiEEGJBVsT0yqK5gFfQ2bUHwErYGmS9RmZUNFwSKYO1cIiushpuXz1wXuEBfxBoqlxFsb
-        UF/2B4VkrF29u/v4UL5F8A21nIlEerQlOj0nT+ZKOpLdjOgYg+2pyPQEwzeLoL8pkoi3N9B9B2fg6irI
-        P/wh+L7tAjNx5N/148K2qD+iWOoOsLkHUHxn4WyQ4/q2rIU6oC6BDyWx/CNnY7m/IjLpoUji+LQnc29Q
-        QY6o+ter0Fu7DsVHOTRAiY8InQyBf/81nJDNh6T4dyDwH+NMwpsuLbe7yLQ3V4Ly6BS7Wm373aByu1vv
-        uWh+8JAjL09iv9e+n6tr388DR9TmzYD+xkgYaI62M9CNo74jxhfar62BWxeWw6KAcaZNXHT0Y5Dtn4Vr
-        fgbo6u4doZYGtPhWKpeOs6vV/DkPyuLcms5HcycRiQ9G6z5uBxrAYHp24LIZaI4xibc1cPl0ICxYgC9Y
-        NaEQ8NlYqD4XBNPf5cDhjDmwesVEOHfsE/Mxet/AGlDjTd2Op4plnbYkLi4ZHpyP5p8simY6EXlD42Y8
-        T04FP4iGcn8rA304Gzkpc+CV37+AIv1NS+irnIXwwTwRXCtcgkfkNDh//FPzMWp+lcDNqzw+1S4/DiJU
-        bOP1F0W5icX4ukKkPRyKo7gBtxO4xtZ9HExEz3a8+XqrV5sN3ChaBlEb34Ds5PfBbxbuj5vrTRt4R8w0
-        2Lv9bbt7gDKguxYEHbLxdrmb9nKgbDOv9Wwk15dI+u4oieZlUIlsk1uyQ/ob6Mej03IJ9eLviNA/wPKl
-        E8wnkK5ug50BzYW/QWuKwC5n3W4OnIviFZ2OYj/aP7BOBjs/e2kzt7LlczY8iKrjvlYGKHbd2mha/9cK
-        l5rvAbOBW+tB+eVb0LLPPlflds5AUSQnrkDMeJLIeDScE7M8y2I52tJY7kBpDLf/ShwH6hOpYq5W1JV8
-        aGWA7iKjDHRVrYD27Ffs4hv3sKEslqv4WszxI6V/OBSI2aIL4hefP7+C/YuzYs7ksxGcYzU7XY3f/tMV
-        BtmSxIPu6yseaEBb9hm0pAjNMYOs2+UKxVGci4WRznxS8kfHqOJIdnxjogvc3XufbZne0Hs7zN4Ajrzq
-        1AyTWMv+FCu3sY2FEZw9J4IYT5HcjwfUGq3a7lJjK0j+7ykomnofumegG4/I9pzfWfWh2IDmy2LZapzd
-        +STl40d1PCuieQ8LbKku+sBkQHd5EXyLS8b2ee1OFyiOdK0owP1FUg0P7iaMDmjew0RRNsQRbsPjlfq0
-        bG9KZELFVhcjjnr6UTHrGZJm+NCU6LyJEvUwrN/NhNJoF33+RpY/CR9e5M5lPNGQ4FzVmOAMQ7E2ngnF
-        Ea7VZ0Jdx5Pw4ceJdUyn8hhWW8NuetEUqWcVcUz4WszKpY5hEjpycGYD663KOOf+ht2jUaw17+waDRej
-        md35YaxlpPvIRIHYObxmx2io3+VkJvW7KJxVnx/m/BrpNnJB7YWicOapmu1OcGenE1zdMhrObGQdy1v7
-        y5dIl5GPoytZL+eFMY+cDmVW5YU6hwz5595P+J8Hg/Fftoc0bcjigp0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="sairToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAB5RJREFUaEPtl2tQVGUYgLemfpTsBip7X7TMmmmcqRkFh4VlpUUhbmaIWJSJcsma
-        ijJgrRBBQRYElssCokDkdJnJcvJHlpbU5DRqGIbhIhcVYbkUwg/Lxqnh7f3O7mHPAnvO7p4z/al35pn1
-        17fP8/Gdb4+i/wenfptshSVTmdCQpVjvji/zVUmdFUHJnxtVyQd3qJLrM2eRodzckK5IdYclS74FvyOt
-        Dv9dtz3wYcdX85uDmYrF9VmKr+szldMNWSpwx4+lS2GydRlMvbeM+hw//BBctSyFSxVL4IfiIDi5WwPH
-        ctVw5HUVNL40/xpM6rOUf+NnBSrcZTfxcXDXTuDuARvH8jQu8pOtD1HcbKF5kGKi2c5vh5fCYP0S6K4M
-        gnMlQXC6QAPHjWr4MFsFh3aQNZU005Z0xXaHivdTnb5QbclQTjMWhJqtCjAlSaH0GSdf5akd4tzyE81L
-        KUiEnSXw6yEn401B0FutgU92qgCPE1gyFO0OHe/HkiEPxgBcxI55ixpOtRTDjb4uGL7eC4MDVrjWb4WR
-        0wWCyP96KIgKIIw0auCjbCqg06Hj/ZCAugwFUKQr4Ozxw3Dr1i2YmpqCiYkJGBsbA5vNBmPfFXsk7xRn
-        lx9v0lBcLFNBbYacZwCKExpffhT++P0Wa8D88nN33RP5sYMauFarhtrtPANqUZ5w5J1wuH37ttsApjzb
-        kXGVD3IrTwfU8Akwb5UH4wJkEQzQuQ0YpQK4z7s38mMH1RiggpptMmEC3mf5C9ABfOSd4nb50UY1XK1R
-        QTXfgOptclwEA95mC9gnuPxMQBqvgEUYICO7AG0eBcyVd4rb5Z3i7PKjjSoqwJwm5RdgTpPhIhiwK8x9
-        wLckgCnOJT/7vM+VH2lQwUAN/vZs5RlQlSYFwnscAULLUwHVSqjkHbAVAxDPAjy/4+eKu8o7AxZ7HzAR
-        F6cin+UYgDtAdgFaWQJGqADvr0k2+ZEGJfRXK6BiixcBIBLdPR4baxyPi7szEROjJgEVLwYCodWo5QwQ
-        Ut5WjwFmLwKG163TjMXGtiNAmIyNXVKeigFbMABp4Qhgk3eKc8sTcRoScOAFDwJGYmI2jj711E0EaEYc
-        AQdQntCS50kAU5yfvDNgkfuAX/R6P1t0dLMtJmYaI8CF6OjS7viI2i+SVgChPW0NTH7wAdw8cgR+a2uD
-        8dZWGG1uBtvJkzDSTgK8kVdxyg9bFNBXJYdydwE3DIbg4ejoXgwAXiQlYcBeF3kifOmACq5UqeaVZ4rT
-        592JgpKfCXh+VgB5UG3r1hmH1669g+ceeJOQwAiwP6zkPb4SH/yy1ADq19QXeUIvBpieX+gMGNLr1Tei
-        otqH1q4FwYiPBxsV4LxpTuXbA4o3+8O5fTKf5IctcgyQgSnVETD05JMbBw2Gm4NRUSAocXEzAfR579hv
-        Dyh9zh/6zEqf5Ifq5HClUgalJGDAYDBdNximERAcvHJJAC1Pn/cfSxTQVabwWp6I05CA/c8GdIouRkS8
-        2RMZ+de1yEgQHLxynQH0WafxXd4lgMx5nU7bpdcP9K9ZA1eFBK9c22kSwC7vKm6/Jp24ihNu1Mqgp0IK
-        JXQAmbMhIZILOl2bVa+fHtDrQRDIVXq6yK343F3nkpdR8jMBm/1dr1Ey57XalC6dbrIvIgL6+UKu0pkA
-        4eTpALzJ5gaQOb9qleZCeHi7VaeDPh70zARwyTPFueUHa6TQcwCv4hQ3AWTIj9q50NC8n8PC7vSGhwOT
-        Dq32i+91IaeOR60AwpcJodCzaxdYjUa4nJcH3bm5cCknB3qamqgAPvJMcVqeYOUKoOfs6tUrL2i1VmtY
-        GFxx0L969fLCTZLgfSn+QGh4I8Tty5xrgDDydMDeTR4EkOlYufJ+/Gs0dmm10z1a7UzA3pQHgNDwRrAH
-        AezyTHEueSqgPBCKNkk8C6DnTEjI+guhoaPkGaECNmEAUp/NHuAqzk/+enUgxeXyxVCU7GUAmXaR6B7y
-        SQKKUJ5gYQ0odJFnis99WD2TpwMKk8XeB9BTuOG+YNwBsgtgeX2V24Chb5wB7PKu4mzyVECZAAGFGyVA
-        qOMMYIpzyzPF55OnA/Yk8QzYs1EMhLrX2AOElifYA/x8D8gnAUkYgFRkPOJhgKs8U9wbeQIV8AzPgAKU
-        p+ntbOcIEE6e0I0Bu/kG4AJkEYry9OVg7fh63gCmuBDyhLNFiyB/wwLfA3Ym+j2Wv8FvmhlBKNu+HMyv
-        PAFVLxMehxO7HxZcvr8qEFqy/OGdpxecceh4PwX4rvT2er8BjHAJmM2n2QEeyc8nSrhmtkOkeyvJ0QmE
-        j18NwN33A2Oi+E2Hjm+TGyvW7kr0m3oXFyMLzkdTuj8M1nLJS2EABftQkLxlXi6XwsVSKZzZEwgnjIvg
-        aPZCaNsRAA3bHsAXODHuvBhyE8VHM1eK7nWo+D7Z0fcr3krwy81NEFuY5CSKa3PiJVV5iZKqn0pk3/Xi
-        fwH7zTLcRfIuL4Pucumfv5hk/V0m2amf9suavt+z2PTZzoUmDDaVpEhMOYkS01sJ4r2zyU2Q5OfELzA4
-        vv7fmYIC0d2dxbLIzhJp6s/75REdpQFBUGB/JfmPj0j0D2kNhcNttjR1AAAAAElFTkSuQmCC
-</value>
-  </data>
+  <metadata name="sqlCommand1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAQEAAAAEAIAAoQgAAFgAAACgAAABAAAAAgAAAAAEAIAAAAAAAAEIAAAAAAAAAAAAAAAAAAAAA
